--- a/My favourite club/CHELSEA FC/style.css
+++ b/My favourite club/CHELSEA FC/style.css
@@ -197,3 +197,40 @@ a{
     text-align: center;
     font-size: 30px;
 }
+section {
+    display: flex;
+}
+
+.card {
+    position: relative;
+    margin: 10px;
+}
+
+.zoom {
+    overflow: hidden;
+}
+
+.zoom img {
+    transition: transform 0.5s;
+}
+
+.zoom:hover img {
+    transform: scale(1.2);
+}
+
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.5); 
+    padding: 10px;
+    border-radius: 5px;
+}
+.cards{
+    width: 100%;
+    height: 650px;
+}
+section{
+    background: blue;
+}
